--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,9 +1,7 @@
 [uwsgi]
-socket=/code/educa/uwsgi_app.sock
-chdir=/code/educa/
-module=educa.wsgi:application
-master=true
-chmod-socket=666
-uid=www-data
-gid=www-data
-vacuum=true
+socket=0.0.0.0:8000
+chdir=/code/src/
+wsgi-file = porfolio/wsgi.py
+processes = 4
+threads = 2
+stats = 0.0.0.0:9191
