--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -6,7 +6,7 @@ crypto==1.4.1
 cryptography==42.0.7
 cssselect2==0.7.0
 Django==5.0.6
-django-ckeditor==6.7.1
+django-ckeditor-5==0.2.13
 django-cors-headers==4.4.0
 django-debug-toolbar==4.3.0
 django-taggit==5.0.1
@@ -17,6 +17,7 @@ flower==2.0.1
 jose==1.0.0
 MarkupSafe==2.1.5
 oauthlib==3.2.2
+pillow==10.3.0
 # psycopg2==2.9.9        # windows
 psycopg2-binary==2.9.9   # linux
 PyJWT==2.8.0
